--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "declaration": true,
     "sourceMap": true
   },
-  "include": ["*.ts"],
+  "include": ["*.ts", "WormholeGeneration/WormholeCreationStrategies.ts", "WormholeGeneration/WormholeCountStrategy.ts"],
   "exclude": ["node_modules", "dist"]
 }
